<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo"
    tools:context=".Abertura">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#5B009688">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:padding="15sp"
                android:text="@string/Bem_vindo"
                android:textColor="#fff"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:lineHeight="20sp"
                android:padding="15sp"
                android:text="@string/title_bem_vindo"
                android:textColor="#fff"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mochiyroppone_regular"
                android:padding="15sp"
                android:text="@string/subtitulo2"
                android:textColor="#fee440"
                android:textSize="14sp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/button"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:backgroundTint="@color/button"
                    android:padding="15sp"
                    android:layout_gravity="bottom|center"
                    android:layout_marginBottom="30dp"
                    android:text="Começar" />

            </FrameLayout>


        </LinearLayout>
    </FrameLayout>
</androidx.appcompat.widget.LinearLayoutCompat>